# ros_yolov5_base

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/my_detect/: my_publisher  my_subscriber
devel/lib/pkgconfig/: my_detect.pc
devel/share/my_detect/cmake/: my_detectConfig.cmake
src/my_detect/: CMakeLists.txt
src/my_detect/src/: my_publisher.cpp  my_subscriber.cpp
